# DeepDiagnostics

./: .gitignore  .gitmodules  .pre-commit-config.yml  .readthedocs.yml  LICENSE.txt  README.md  config.yml.template  environment.yml  pyproject.toml  showyourwork.yml
.github/workflows/: documentation.yml  lint.yml  publish.yml  test.yaml
docs/source/: client.rst  conf.py  configuration.rst  data.rst  index.rst  metrics.rst  models.rst  plots.rst  quickstart.rst  ref.bib
docs/source/API/: client.rst  data.rst  metrics.rst  models.rst  plots.rst  utils.rst
notebooks/: cornerplot.ipynb  evaluate_SBI.ipynb  evaluate_SBI_generative.ipynb  evaluate_SBI_on_the_fly.ipynb  evaluate_SBI_static.ipynb  example.ipynb  save_and_load_data.ipynb  train_SBI.ipynb
resources/saveddata/: Hierarchicalpendulum_data_test_40.h5  data_train.h5
resources/savedmodels/hnpe_src/: diagnostics.py  flows.py  neural_nets.py  plotting.py  resnet.py  toy_data.py
resources/savedmodels/sbi/: sbi_linear_generative.pkl
saveddata/: data_validation.h5
savedmodels/sbi/: sbi_linear_from_data.pkl
src/client/: DeepDiagnostics  client.py
src/data/: __init__.py  data.py  h5_data.py  pickle_data.py  simulator.py
src/deepdiagnostics/client/: client.py
src/deepdiagnostics/data/: __init__.py  data.py  h5_data.py  lookup_table_simulator.py  pickle_data.py  simulator.py
src/deepdiagnostics/metrics/: __init__.py  all_sbc.py  coverage_fraction.py  local_two_sample.py  metric.py  under_cdf_parity.py
src/deepdiagnostics/models/: __init__.py  model.py  sbi_model.py
src/deepdiagnostics/plots/: PQMass  __init__.py  cdf_parity.py  cdf_ranks.py  covariance_histogram  coverage_fraction.py  credible_regions  local_two_sample.py  lossPlot.py  parity.py  plot.py  predictive_posterior_check.py  predictive_prior_check.py  (+3 more)
src/metrics/: __init__.py  all_sbc.py  coverage_fraction.py  local_two_sample.py  metric.py  sbistats.py
src/models/: __init__.py  model.py  sbi_model.py
src/plots/: __init__.py  cdf_ranks.py  coverage_fraction.py  local_two_sample.py  parity.py  plot.py  predictive_posterior_check.py  predictive_prior_check.py  ranks.py  tarp.py
src/scripts/: evaluate.py  io.py  paths.py  plot.py  train.py
src/utils/: config.py  defaults.py  plotting_utils.py  register.py  variable_store.py
test/: test_evaluate.py  test_example.py
tests/: conftest.py  test_client.py  test_evaluate.py  test_metrics.py  test_plots.py  test_utils.py
(+6 files in other folders)
