[tool.poetry]
name = "DeepDiagnostics" 
packages = [{include = "*", from="src"}]
version = "0.1.0"
description = "a package for diagnosing posterior quality from inference methods"
authors = ["Becky Nevin <rnevin@fnal.gov>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
sbi = "^0.22.0"
flake8 = "^7.0.0"
black = "^24.1.1"
pyarrow = "^15.0.0"
getdist = "^1.4.7"
h5py = "^3.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
