[tool.poetry]
name = "deepdiagnostics" 
packages = [{include = "*", from="src"}]
version = "1.5.1.alpha"
description = "a package for diagnosing posterior quality from inference methods"
authors = ["Becky Nevin <rnevin@fnal.gov>", "M Voetberg <maggiev@fnal.gov>"]
license = "MIT"

[tool.poetry.scripts]
diagnose = "deepdiagnostics.client.client:main"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
sbi = "^0.22.0"
getdist = "^1.4.7"
h5py = "^3.10.0"
numpy = "^2.0.0"
matplotlib = "^3.8.3"
tarp = "^0.1.1"
deprecation = "^2.1.0"
scipy = "^1.15.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.2"
pytest-cov = "^4.1.0"
flake8 = "^7.0.0"
pytest = "^7.3.2"
black = "^24.3.0"
ruff = "^0.3.5"
sphinx = "^7.2.6"
sphinxcontrib-bibtex = "^2.6.2"
sphinx-autodoc-typehints = "^2.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
